--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,5 @@ jobs:
           username: 'root'   #ssh user name
           server: ${{ secrets.SERVER_IP }} #引用之前创建好的secret
           ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} #引用之前创建好的secret
-          local_path: './*'  # 对应我们项目build的文件夹路径
+          local_path: './.vuepress/dist/*'  # 对应我们项目build的文件夹路径
           remote_path: '/var/www/Docs'
