feat(admin): github actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,8 +36,8 @@ jobs:
         uses: wlixcc/SFTP-Deploy-Action@v1.0
         with:
           BRANCH: gh-pages
-          username: 'root'   #ssh user name
-          server: ${{ secrets.SERVER_IP }} #引用之前创建好的secret
-          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }} #引用之前创建好的secret
-          local_path: './.vuepress/dist/*'  # 对应我们项目build的文件夹路径
-          remote_path: '/var/www/Docs'
+          username: 'root'                                    # ssh username
+          server: ${{ secrets.SERVER_IP }}                    # 引用之前创建好的secret
+          ssh_private_key: ${{ secrets.SSH_PRIVATE_KEY }}     # 引用之前创建好的secret
+          local_path: './.vuepress/dist/*'                    # 对应项目build的文件夹路径
+          remote_path: '/var/www/Docs'                        # 服务器路径
