--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
   "dependencies": {
     "@vuepress/plugin-last-updated": "^1.9.7",
     "clipboard": "^2.0.4",
-    "moment": "^2.29.3"
+    "md5": "2.2.1",
+    "moment": "^2.29.3",
+    "vue": "^2.6.14"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
@@ -43,13 +45,11 @@
     "@types/unist": "^2.0.3",
     "@types/vfile": "^4.0.0",
     "@types/vfile-message": "^2.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@vssue/api-bitbucket-v2": "^1.1.1",
     "@vssue/api-gitee-v5": "^1.4.4",
     "@vssue/api-github-v3": "^1.4.4",
     "@vssue/api-github-v4": "^1.2.0",
     "@vssue/api-gitlab-v4": "^1.1.1",
-    "@vue/composition-api": "1.0.0-beta.21",
     "@vuepress/plugin-blog": "1.9.2",
     "@vuepress/plugin-medium-zoom": "1.5.0",
     "@vuepress/shared-utils": "1.8.2",
@@ -60,21 +60,17 @@
     "cz-customizable": "^6.2.0",
     "docsearch.js": "2.6.3",
     "eslint": "^6.8.0",
-    "eslint-plugin-typescript": "^0.14.0",
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^4.2.5",
     "jest": "^26.6.3",
     "lerna": "^3.22.0",
     "lint-staged": "^10.2.7",
-    "md5": "2.2.1",
     "sort-package-json": "^1.44.0",
     "timers": "^0.1.1",
     "ts-jest": "^26.4.4",
-    "typescript": "4.1.2",
     "valine": "^1.4.14",
     "vssue": "^1.4.6",
     "vue-click-outside": "1.1.0",
-    "vue-demi": "^0.5.3",
     "vue-property-decorator": "^9.1.2",
     "vuepress": "1.8.2",
     "vuepress-plugin-container": "^2.1.5",
