--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
   "dependencies": {
     "@vuepress/plugin-last-updated": "^1.9.7",
     "clipboard": "^2.0.4",
-    "md5": "2.2.1",
+    "md5": "2.3.0",
     "moment": "^2.29.3",
     "vue": "^2.6.14"
   },
   "devDependencies": {
-    "@commitlint/cli": "^8.3.5",
-    "@commitlint/config-conventional": "^8.3.4",
+    "@commitlint/cli": "^16.3.0",
+    "@commitlint/config-conventional": "^16.2.4",
     "@types/events": "^3.0.0",
     "@types/jest": "^26.0.15",
     "@types/unist": "^2.0.3",
@@ -50,7 +50,7 @@
     "@vssue/api-github-v3": "^1.4.4",
     "@vssue/api-github-v4": "^1.2.0",
     "@vssue/api-gitlab-v4": "^1.1.1",
-    "@vuepress/plugin-blog": "1.9.2",
+    "@vuepress/plugin-blog": "1.9.4",
     "@vuepress/plugin-medium-zoom": "1.5.0",
     "@vuepress/shared-utils": "1.8.2",
     "babel-eslint": "^10.1.0",
@@ -62,19 +62,16 @@
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^4.2.5",
-    "jest": "^26.6.3",
-    "lerna": "^3.22.0",
     "lint-staged": "^10.2.7",
-    "sort-package-json": "^1.44.0",
+    "sort-package-json": "1.57.0",
     "timers": "^0.1.1",
-    "ts-jest": "^26.4.4",
     "valine": "^1.4.14",
     "vssue": "^1.4.6",
     "vue-click-outside": "1.1.0",
     "vue-property-decorator": "^9.1.2",
-    "vuepress": "1.8.2",
+    "vuepress": "1.9.7",
     "vuepress-plugin-container": "^2.1.5",
-    "vuepress-plugin-smooth-scroll": "^0.0.9"
+    "vuepress-plugin-smooth-scroll": "^0.0.10"
   },
   "publishConfig": {
     "access": "public"
