docs(admin): 'kanbanniang'

--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "@vssue/api-github-v4": "^1.2.0",
     "@vssue/api-gitlab-v4": "^1.1.1",
     "@vuepress/plugin-blog": "1.9.4",
-    "@vuepress/plugin-medium-zoom": "1.5.0",
-    "@vuepress/shared-utils": "1.8.2",
+    "@vuepress/plugin-medium-zoom": "^1.9.7",
+    "@vuepress/shared-utils": "^1.9.7",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.1.2",
     "concurrently": "^5.3.0",
@@ -62,14 +62,14 @@
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^4.2.5",
-    "lint-staged": "^10.2.7",
-    "sort-package-json": "1.57.0",
+    "lint-staged": "^12.4.1",
+    "sort-package-json": "^1.57.0",
     "timers": "^0.1.1",
     "valine": "^1.4.14",
     "vssue": "^1.4.6",
-    "vue-click-outside": "1.1.0",
+    "vue-click-outside": "^1.1.0",
     "vue-property-decorator": "^9.1.2",
-    "vuepress": "1.9.7",
+    "vuepress": "^1.9.7",
     "vuepress-plugin-container": "^2.1.5",
     "vuepress-plugin-smooth-scroll": "^0.0.10"
   },
