--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
   },
   "dependencies": {
     "@vuepress/plugin-last-updated": "^1.9.7",
+    "async-validator": "^4.1.1",
     "clipboard": "^2.0.4",
+    "element-ui": "^2.15.8",
     "md5": "2.3.0",
     "moment": "^2.29.3",
+    "prismjs": "^1.28.0",
     "vue": "^2.6.14"
   },
   "devDependencies": {
