--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "async-validator": "^4.1.1",
     "clipboard": "^2.0.4",
     "element-ui": "^2.15.8",
+    "markdown-it-katex": "^2.0.3",
     "md5": "2.3.0",
     "moment": "^2.29.3",
     "prismjs": "^1.28.0",
