--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,3 @@
 [[redirects]]
-  from = "/SummerSoda/*"
-  to = "https://summersoda.xyz/SummerSoda/:splat"
-  status = 200
-  force = true
+from = "/*"
+to = "/SummerSoda/:splat"
