chore: 解决打包内存溢出问题

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A beautiful blog theme",
   "author": "reco_luan",
   "scripts": {
-    "build": "vuepress build .",
+    "build": "cross-env NODE_OPTIONS=--max_old_space_size=10240 && vuepress build .",
     "commit": "git add . && git-cz",
     "dev": "vuepress dev . --open --host \"localhost\"",
     "push:codeup": "npm run commit && git push codeup",
