--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   },
   "lint-staged": {
     "*.{js,ts,vue}": [
-      "eslint --fix --ext .js,.vue ./",
-      "git add"
+      "eslint --fix --ext .js,.vue ./"
     ],
     "package.json": [
       "sort-package-json"
